upgrade to angular 8
Signed-off-by: Efren Lim <elim@linuxfoundation.org>

--- a/src/app/pages/discover/discover.component.scss
+++ b/src/app/pages/discover/discover.component.scss
@@ -52,7 +52,7 @@
   color: #878686;
 }
 
-:host /deep/ .search-section {
+:host ::ng-deep .search-section {
   display: flex;
   align-items: center;
   justify-content: flex-end;
