--- a/src/app/pages/participate/maintainer/maintainer/maintainer.component.scss
+++ b/src/app/pages/participate/maintainer/maintainer/maintainer.component.scss
@@ -5,7 +5,7 @@
   @include page-base($background-grey-color);
 }
 
-/deep/.dropdown-menu {
+::ng-deep.dropdown-menu {
   max-height: 300px;
   overflow: scroll;
   z-index: 30;
