--- a/src/app/pages/projects/project-edit/project-edit.component.scss
+++ b/src/app/pages/projects/project-edit/project-edit.component.scss
@@ -6,7 +6,7 @@
   @include page-base($background-grey-color);
 }
 
-/deep/.dropdown-menu {
+::ng-deep.dropdown-menu {
   max-height: 300px;
   overflow: scroll;
 }
