--- a/src/app/pages/participate/employer/employer/employer.component.html
+++ b/src/app/pages/participate/employer/employer/employer.component.html
@@ -417,18 +417,16 @@
       />
       <i class="fas fa-asterisk required"></i>
       I agree to the LFX
-      <a href="{{ communityBridgeUrl + 'platform-use-agreement' }}" target="_window" class="semibold" i18n
+      <a href="{{ communityBridgeUrl + 'platform-use-agreement' }}" target="_window" class="semibold"
         >Platform Use Agreement</a
       >
       and all terms incorporated therein, including the
-      <a href="{{ communityBridgeUrl + 'service-terms' }}" target="_window" class="semibold" i18n
+      <a href="{{ communityBridgeUrl + 'service-terms' }}" target="_window" class="semibold"
         >Service-Specific Use Terms</a
       >, the
-      <a href="{{ communityBridgeUrl + 'acceptable-use' }}" target="_window" class="semibold" i18n
-        >Acceptable Use Policy</a
-      >
+      <a href="{{ communityBridgeUrl + 'acceptable-use' }}" target="_window" class="semibold">Acceptable Use Policy</a>
       and the
-      <a href="https://www.linuxfoundation.org/privacy/" target="_window" class="semibold" i18n>Privacy Policy</a>.
+      <a href="https://www.linuxfoundation.org/privacy/" target="_window" class="semibold">Privacy Policy</a>.
     </div>
     <div
       *ngIf="termsConditions.invalid && (termsConditions.dirty || termsConditions.touched || pageSubmitted)"
