--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,10 +6,10 @@
         uses trademarks. <br />For a list of trademarks of The Linux Foundation, please see our
         <a href="https://www.linuxfoundation.org/trademark-usage" target="_window">Trademark Usage</a> page. Linux is a
         registered trademark of Linus Torvalds.<br />
-        <a i18n href="{{ communityBridgeUrl + 'acceptable-use' }}" target="_window">Acceptable Use Policy</a> |
-        <a i18n href="{{ communityBridgeUrl + 'service-terms' }}" target="_window">Service-Specific Terms</a> |
-        <a i18n href="{{ communityBridgeUrl + 'platform-use-agreement' }}" target="_window">Platform Use Agreement</a> |
-        <a i18n href="{{ communityBridgeUrl + 'mentorship/guide' }}" target="_window">LFX Mentorship Guide</a>
+        <a href="{{ communityBridgeUrl + 'acceptable-use' }}" target="_window">Acceptable Use Policy</a> |
+        <a href="{{ communityBridgeUrl + 'service-terms' }}" target="_window">Service-Specific Terms</a> |
+        <a href="{{ communityBridgeUrl + 'platform-use-agreement' }}" target="_window">Platform Use Agreement</a> |
+        <a href="{{ communityBridgeUrl + 'mentorship/guide' }}" target="_window">LFX Mentorship Guide</a>
       </p>
     </div>
   </div>
