--- a/src/app/shared/transaction-list-item/transaction-list-item.component.html
+++ b/src/app/shared/transaction-list-item/transaction-list-item.component.html
@@ -8,10 +8,10 @@
   </div>
   <div role="cell" class="col-3 col-sm-3 my-auto" i18n>
     <div class="row mx-0 px-0 my-auto">
-      <div class="sr-only" i18n> Task Name </div>
+      <div class="sr-only">Task Name</div>
       <div class="col my-auto px-0">
         <div class="header-6 medium description pb-2">Lorem Ipsum Dollal Esse</div>
-        <div class="small regular text-light" i18n>Vestibulum rutrum quam vitae fringilla...</div>
+        <div class="small regular text-light">Vestibulum rutrum quam vitae fringilla...</div>
       </div>
     </div>
   </div>
@@ -19,10 +19,10 @@
     <img class="avatar-url avatar-rounded avatar-small" alt="" src="https://randomuser.me/api/portraits/men/72.jpg" />
   </div>
   <div role="cell" class="col-5 col-sm-2 my-auto" i18n>
-    <div class="tag high" i18n>High</div>
+    <div class="tag high">High</div>
   </div>
   <div role="cell" class="col-5 col-sm-2 my-auto" i18n>
-    <div class="tag hold" i18n>On Hold</div>
+    <div class="tag hold">On Hold</div>
   </div>
   <div role="cell" class="col-5 col-sm-2 my-auto" i18n>
     <a [href]="'#'" class="task-item-view">View Details</a>
