fix style imports
Signed-off-by: Efren Lim <elim@linuxfoundation.org>

--- a/src/app/pages/participate/mentor/application-submitted/submitted-application.component.scss
+++ b/src/app/pages/participate/mentor/application-submitted/submitted-application.component.scss
@@ -1,12 +1,12 @@
-@import '~constants.scss';
+@import 'constants.scss';
 
 :host {
   @include page-base($background-grey-color);
 }
 
 .header-banner {
-    padding: 20px 0px;
-    background-color: #003366;
+  padding: 20px 0px;
+  background-color: #003366;
 }
 
 p {
