--- a/src/app/shared/switch/switch.component.scss
+++ b/src/app/shared/switch/switch.component.scss
@@ -8,8 +8,8 @@
 // - Fully accessible
 //
 
-@import '~theme.scss';
-@import '~constants.scss';
+@import 'theme.scss';
+@import 'constants.scss';
 
 $custom-control-indicator-bg: $primary-grey-color;
 $custom-control-indicator-disabled-bg: #e9ecef;
