--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-@import '~theme.scss';
-@import '~constants.scss';
+@import './theme.scss';
+@import './constants.scss';
 
 html,
 body {
