--- a/src/app/pages/mentee/mentee/mentee-tasks/mentee-tasks.component.scss
+++ b/src/app/pages/mentee/mentee/mentee-tasks/mentee-tasks.component.scss
@@ -1,18 +1,18 @@
-@import '~constants.scss';
+@import 'constants.scss';
 @import '~bootstrap/scss/bootstrap-grid.scss';
 @import '../mentee.component.scss';
 
-::ng-deep{
-    .tab-content {
-      padding-top: 50px;
-    }
+::ng-deep {
+  .tab-content {
+    padding-top: 50px;
+  }
 
-    .modal-dialog {
-      max-width: 700px;
+  .modal-dialog {
+    max-width: 700px;
 
-      .calendar {
-        height: auto;
-        border: 1px solid #ccc;
-      }
+    .calendar {
+      height: auto;
+      border: 1px solid #ccc;
     }
+  }
 }
