--- a/src/app/pages/participate/employer/employer/employer.component.scss
+++ b/src/app/pages/participate/employer/employer/employer.component.scss
@@ -1,5 +1,5 @@
-@import '~constants.scss';
-@import "../../../../app.component.scss";
+@import 'constants.scss';
+@import '../../../../app.component.scss';
 
 :host {
   @include page-base($background-grey-color);
@@ -14,7 +14,7 @@
 }
 
 label i {
-  padding-left: 5px; 
+  padding-left: 5px;
 }
 
 .tc-link {
