--- a/src/app/pages/participate/mentor/mentor-join/mentor-join.component.scss
+++ b/src/app/pages/participate/mentor/mentor-join/mentor-join.component.scss
@@ -1,5 +1,5 @@
-@import '~constants.scss';
-@import "../../../../app.component.scss";
+@import 'constants.scss';
+@import '../../../../app.component.scss';
 
 :host {
   @include page-base($background-grey-color);
