--- a/src/app/pages/participate/participate/participate.component.scss
+++ b/src/app/pages/participate/participate/participate.component.scss
@@ -1,16 +1,16 @@
-@import '~constants.scss';
+@import 'constants.scss';
 
 :host {
   @include page-base($background-grey-color);
 }
 
-.background-white{
+.background-white {
   background: #ffffff;
 }
 
 .header-banner {
-    padding: 20px 0px;
-    background-color: #003366;
+  padding: 20px 0px;
+  background-color: #003366;
 }
 
 h1 {
@@ -49,81 +49,79 @@ h3 {
   background-color: #2a99cc;
 }
 
-
 .welcome-cards {
-    margin-left: -60px;
-    margin-right: -60px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+  margin-left: -60px;
+  margin-right: -60px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 
-    @media screen and (max-width: 991px) {
-        margin-left: 0px;
-        margin-right: 0px;
+  @media screen and (max-width: 991px) {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .welcome-card {
+    text-align: center;
+    @media (max-width: 991px) {
+      margin-bottom: 45px;
     }
+  }
 
+  .card-title {
+    font-size: 26px;
+    font-weight: 600;
+    letter-spacing: -0.5px;
+    text-align: center;
+    color: #010101;
+  }
 
-    .welcome-card {
-        text-align: center;
-        @media (max-width: 991px) {
-            margin-bottom: 45px;
-        }
+  .card-text {
+    font-size: 13.5px;
+    letter-spacing: -0.3px;
+    text-align: center;
+    color: #878686;
+    margin-bottom: 40px;
+
+    @media screen and (min-width: 1375px) {
+      min-height: 4.5em;
     }
-
-    .card-title {
-        font-size: 26px;
-        font-weight: 600;
-        letter-spacing: -0.5px;
-        text-align: center;
-        color: #010101;
+    @media screen and (min-width: 1160px) and (max-width: 1374px) {
+      min-height: 6em;
     }
-
-    .card-text {
-        font-size: 13.5px;
-        letter-spacing: -0.3px;
-        text-align: center;
-        color: #878686;
-        margin-bottom: 40px;
-
-        @media screen and (min-width: 1375px) {
-          min-height: 4.5em;
-        }
-        @media screen and (min-width: 1160px) and (max-width: 1374px) {
-          min-height: 6em;
-        }
-        @media screen and (min-width: 1130px) and (max-width: 1159px) {
-          min-height: 7.5em;
-        }
-        @media screen and (min-width: 1015px) and (max-width: 1129px) {
-          min-height: 9em;
-        }
+    @media screen and (min-width: 1130px) and (max-width: 1159px) {
+      min-height: 7.5em;
     }
-
-    .btn-info {
-        border-radius: 7.5px;
-        background-color: #0099cc !important;
-        font-size: 12.5px;
-        font-weight: 600;
-        letter-spacing: -0.5px;
-        text-align: center;
-        color: #fff;
-        padding: 0 40px;
-        text-transform: uppercase;
-        font-family: "Open Sans";
+    @media screen and (min-width: 1015px) and (max-width: 1129px) {
+      min-height: 9em;
     }
+  }
 
-    .btn-info:hover {
-      border:2px solid #878686;
-    }
+  .btn-info {
+    border-radius: 7.5px;
+    background-color: #0099cc !important;
+    font-size: 12.5px;
+    font-weight: 600;
+    letter-spacing: -0.5px;
+    text-align: center;
+    color: #fff;
+    padding: 0 40px;
+    text-transform: uppercase;
+    font-family: 'Open Sans';
+  }
 
-    .fas {
-      font-size: 4em;
-      background-color: #E1F2F8;
-      color: #0099cc;
-      border-radius: 50%;
-      width: 150px;
-      height: 150px;
-      line-height: 150px;
-    }
+  .btn-info:hover {
+    border: 2px solid #878686;
+  }
+
+  .fas {
+    font-size: 4em;
+    background-color: #e1f2f8;
+    color: #0099cc;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    line-height: 150px;
+  }
 }
 
 .card {
@@ -193,12 +191,7 @@ small {
 .overflow {
   width: 236px;
   /*   background:red; */
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 60%,
-    rgba(255, 255, 255, 1) 100
-  );
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 60%, rgba(255, 255, 255, 1) 100);
   height: 20px;
   margin-top: -20px;
   position: absolute;
@@ -576,7 +569,8 @@ small {
   position: relative;
 }
 
-.funding-container, .mentors-container {
+.funding-container,
+.mentors-container {
   cursor: pointer;
 }
 
@@ -588,7 +582,7 @@ small {
   // Ensure margins match those on in the page body
   padding-left: 6rem;
   padding-right: 6rem;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .nav-items {
@@ -620,7 +614,7 @@ small {
       float: right;
       border: 0;
       background: none;
-      font-size: .75rem;
+      font-size: 0.75rem;
       cursor: pointer;
       color: #2a99cc;
       font-weight: bold;
@@ -635,7 +629,9 @@ small {
   Mentor Card
 */
 .card.mentor-card {
-  .card-title, .card-description, .card-description-label {
+  .card-title,
+  .card-description,
+  .card-description-label {
     color: white;
   }
   .overflow {
