--- a/src/app/pages/profile/profile-edit/employer/employer-profile-edit.component.scss
+++ b/src/app/pages/profile/profile-edit/employer/employer-profile-edit.component.scss
@@ -1,4 +1,4 @@
-@import '~constants.scss';
+@import 'constants.scss';
 @import '../../../../app.component.scss';
 
 :host {
@@ -14,7 +14,7 @@
 }
 
 label i {
-  padding-left: 5px; 
+  padding-left: 5px;
 }
 
 .tc-link {
@@ -51,10 +51,10 @@ h3 {
   }
 }
 
-@include media-breakpoint-down(md){
-.sub-title{
-  margin: 0px !important;
-}
+@include media-breakpoint-down(md) {
+  .sub-title {
+    margin: 0px !important;
+  }
 }
 .form-group {
   .form-check {
