--- a/src/app/pages/projects/project-detail/project-public/project-public.component.scss
+++ b/src/app/pages/projects/project-detail/project-public/project-public.component.scss
@@ -1,4 +1,4 @@
-@import '~constants.scss';
+@import 'constants.scss';
 @import '~bootstrap/scss/bootstrap-grid.scss';
 @import '../project-detail.component.scss';
 
