--- a/src/app/pages/projects/project-edit/project-edit.component.scss
+++ b/src/app/pages/projects/project-edit/project-edit.component.scss
@@ -1,4 +1,4 @@
-@import '~constants.scss';
+@import 'constants.scss';
 @import '../../../app.component.scss';
 @import '~bootstrap/scss/bootstrap-grid.scss';
 
