--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,4 +1,4 @@
-@import '~constants.scss';
+@import 'constants.scss';
 @import '~bootstrap/scss/bootstrap-grid.scss';
 
 :host {
@@ -12,7 +12,7 @@
   p {
     color: #ccc;
     font-size: 12px;
-    line-height: 24px;  
+    line-height: 24px;
     font-family: 'Open Sans';
 
     a {
