--- a/src/app/shared/tasks/tasks/tasks.component.scss
+++ b/src/app/shared/tasks/tasks/tasks.component.scss
@@ -1,4 +1,4 @@
-@import '~constants.scss';
+@import 'constants.scss';
 @import '../../../app.component.scss';
 @import '~bootstrap/scss/bootstrap-grid.scss';
 
